--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,34 +16,29 @@
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_gravity="start">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ScrollView
+            <ListView
+                android:id="@+id/server_list"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:background="@color/colorAccentDark">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
-            </ScrollView>
+            </ListView>
 
             <android.support.design.widget.NavigationView
                 android:id="@+id/nav_view"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
-                android:fitsSystemWindows="true"
                 app:headerLayout="@layout/nav_header_main"
                 app:menu="@menu/sidebar_server_menu">
-
-
             </android.support.design.widget.NavigationView>
+
         </LinearLayout>
     </android.support.design.widget.NavigationView>
 
