--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="server_name_margin_horizontal">16dp</dimen>
     <dimen name="server_name_margin_vertical">20dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="server_entry_size">50dp</dimen>
 </resources>
