--- a/app/src/main/res/layout/ark_server_list_entry.xml
+++ b/app/src/main/res/layout/ark_server_list_entry.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="0dp"
-    android:padding="5dp">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_centerInParent="true"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/server_entry_size"
+    android:layout_height="@dimen/server_entry_size">
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="@dimen/server_entry_size"
+        android:layout_height="@dimen/server_entry_size"
+        android:id="@+id/server_entry_icon"
         android:src="@drawable/placeholder_server_entry"
-        android:layout_margin="0dp"
-        android:padding="0dp"
-        android:id="@+id/server_entry_icon"/>
+
+        />
 </LinearLayout>
