--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,11 @@
     tools:showIn="@layout/app_bar_main"
     android:background="@color/colorPrimary">
 
-    <include layout="@layout/server_main_map"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+        android:id="@+id/main_fragment_container">
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
