--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="server_name_margin_vertical">20dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="server_entry_size">50dp</dimen>
+    <dimen name="standard_border_radius">8dp</dimen>
+    <dimen name="progress_bar_height">40dp</dimen>
 </resources>
