--- a/app/src/main/res/layout/content_ark_server_notifications_menu.xml
+++ b/app/src/main/res/layout/content_ark_server_notifications_menu.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".NetEntities.ArkServerNotificationsMenuActivity"
+    tools:context=".ArkServerNotificationsMenuActivity"
     tools:showIn="@layout/activity_ark_server_notifications_menu">
 
     <TextView
