--- a/app/src/main/res/layout/fragment_dino_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_dino_list_dialog.xml
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/dinoBottomSheetImage"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="55sp"
+        android:layout_height="55sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="Dino Image"/>
@@ -24,8 +24,8 @@
         android:id="@+id/dinoBottomSheetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="17sp"
+        android:layout_marginTop="14sp"
         android:text="Name"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/dinoBottomSheetImage"
@@ -36,7 +36,7 @@
         android:id="@+id/dinoBottomSheetClassname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="17sp"
         android:text="Classname"
         app:layout_constraintStart_toEndOf="@+id/dinoBottomSheetImage"
         app:layout_constraintTop_toBottomOf="@+id/dinoBottomSheetName"
