--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorTextWhite">#FFF</color>
+    <color name="colorTextAlmostWhite">#DDD</color>
     <color name="colorPrimary">#33363c</color>
     <color name="colorAccent">#5585e6</color>
     <color name="colorAccentDark">#252629</color>
+    <color name="colorAccentDarkish">#45484e</color>
 </resources>
