--- a/app/src/main/res/layout/fragment_dino_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_dino_list_dialog.xml
@@ -8,7 +8,8 @@
     android:clipToPadding="false"
     android:paddingBottom="16dp"
     tools:context=".DinoStatsDialogFragment"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:scrollbars="vertical">
 
     <ImageView
         android:id="@+id/dinoBottomSheetImage"
@@ -89,6 +90,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dinoBottomSheetStatFood"/>
+
+    <GridView
+        android:id="@+id/dino_inventory_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:columnWidth="90dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        android:padding="0dp"
+        android:rowHeight="90dp"
+        android:stretchMode="columnWidth"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dinoBottomSheetStatWeight" />
 
 
 </android.support.constraint.ConstraintLayout>
