Changes to the main menu and startup. Added ability to pick up the server you were last on. Also added more error handling on the network side.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorPrimary">#33363c</color>
     <color name="colorAccent">#5585e6</color>
     <color name="colorAccentDark">#252629</color>
+    <color name="colorAccentLightish">#38393d</color>
     <color name="colorAccentDarkish">#45484e</color>
 </resources>
