--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,14 +34,26 @@
                 android:dividerHeight="8dp">
             </ListView>
 
-            <android.support.design.widget.NavigationView
-                android:id="@+id/nav_view"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="start"
-                app:headerLayout="@layout/nav_header_main"
-                app:menu="@menu/sidebar_server_menu">
-            </android.support.design.widget.NavigationView>
+                android:layout_gravity="start">
+                <android.support.design.widget.NavigationView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:id="@+id/nav_view"
+                    app:headerLayout="@layout/nav_header_main"
+                    app:menu="@menu/sidebar_server_menu"
+                    android:layout_above="@id/footer">
+                </android.support.design.widget.NavigationView>
+                <include
+                    layout="@layout/nav_footer_main"
+                    android:id="@+id/footer"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout >
 
         </LinearLayout>
     </android.support.design.widget.NavigationView>
