--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="server_entry_size">50dp</dimen>
     <dimen name="standard_border_radius">8dp</dimen>
     <dimen name="progress_bar_height">40dp</dimen>
+    <dimen name="bottom_footer_image_size">20dp</dimen>
 </resources>
